# AsterYggdrasil

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  README.zh.md  build.rs  config.example.toml  docker-compose.yml
.github/workflows/: docker-image.yml  rust.yml  vitepress.yml
crates/aster-texture-renderer/: Cargo.toml
crates/aster-texture-renderer/src/: lib.rs
crates/aster-texture-renderer/src/engine/: skin2d.rs
developer-docs/: README.md
developer-docs/en/: README.md  mail-runtime.md  user-bans.md  yggdrasil-api.md
developer-docs/zh-CN/: README.md  mail-runtime.md  user-bans.md  yggdrasil-api.md
docs/: index.md
docs/.vitepress/: config.ts
docs/deployment/: docker.md  index.md
docs/en/: index.md
docs/en/deployment/: docker.md  index.md
docs/en/guide/: about.md  admin-guide.md  audit-tasks.md  configuration.md  docs-contributing.md  faq.md  getting-started.md  index.md  launcher-login.md  profiles.md  storage.md  troubleshooting.md  user-bans.md  user-guide.md  yggdrasil-api.md  yggdrasil-textures.md
docs/guide/: about.md  admin-guide.md  audit-tasks.md  configuration.md  docs-contributing.md  faq.md  getting-started.md  index.md  launcher-login.md  profiles.md  storage.md  troubleshooting.md  user-bans.md  user-guide.md  yggdrasil-api.md  yggdrasil-textures.md
docs/plans/: minecraft-profile-official-binding-plan.md  skin-station-plan.md
docs/public/: CNAME  robots.txt
frontend-panel/: AGENTS.md  biome.json  index.html  package.json  tsconfig.app.json  vite.config.ts
frontend-panel/e2e/: smoke.spec.ts
frontend-panel/src/: App.test.tsx  App.tsx  index.css  indexCss.test.ts  main.tsx
frontend-panel/src/hooks/: useApiError.ts  useApiList.ts  useAuthRedirectToast.ts  usePageTitle.test.tsx  usePageTitle.ts  usePublicSession.ts  usePwaUpdate.test.tsx  usePwaUpdate.ts  useRetainedDialogValue.ts  useTextureTagPager.ts
frontend-panel/src/i18n/: accountCopy.test.ts  dashboardCopy.test.ts  index.test.ts  index.ts  resources.ts
frontend-panel/src/lib/: audit.test.ts  audit.ts  authRedirectToast.ts  avatarCrop.ts  branding.ts  dateTime.test.ts  dateTime.ts  externalAuthProviders.ts  form.ts  lazyWithPreload.ts  numberUnit.test.ts  numberUnit.ts  operatorScopes.ts  pagination.ts  presentation.test.ts  presentation.ts  pwaWarmup.test.ts  pwaWarmup.ts  pwaWarmupLoaders.ts  query.ts  storage.ts  tasks.ts  user.ts  userAgent.test.ts  userAgent.ts  validation.test.ts  validation.ts  webauthn.ts
migration/: Cargo.toml
migration/src/: lib.rs  m20260606_000001_foundation_schema.rs  m20260615_000001_yggdrasil_profiles.rs  m20260615_000002_minecraft_textures.rs  m20260615_000003_passkeys.rs  m20260616_000001_yggdrasil_token_temporary_invalidation.rs  m20260618_000003_audit_log_activity_indexes.rs  m20260618_000006_texture_library_review.rs  m20260618_000007_texture_library_reports.rs  m20260619_000001_cursor_pagination_indexes.rs  m20260620_000001_yggdrasil_session_forward_servers.rs  m20260620_000002_user_bans.rs  m20260626_000001_runtime_leases.rs  m20260626_000002_background_task_dedupe_key.rs  m20260626_000003_scheduled_tasks.rs  m20260626_000004_widen_mail_outbox_template_code.rs  m20260629_000001_external_auth_identity_metadata.rs  m20260630_000001_minecraft_profile_rename_count.rs  m20260701_000001_nullable_user_email.rs  m20260701_000002_minecraft_profile_normalized_name.rs  m20260701_000003_ensure_user_email_nullable.rs  m20260702_000001_external_auth_binding_flows.rs  m20260702_000002_minecraft_profile_source.rs
src/: build_info.rs  errors.rs  lib.rs  main.rs
src/api/: cache.rs  error_code.rs  http.rs  mod.rs  openapi.rs  pagination.rs  response.rs
src/cache/: mod.rs
src/config/: audit.rs  auth_runtime.rs  avatar.rs  branding.rs  cors.rs  definitions.rs  loader.rs  local_email_policy.rs  mail.rs  mod.rs  operations.rs  runtime_config.rs  schema.rs  site_url.rs  system_config.rs  texture_library.rs  texture_preview.rs  yggdrasil.rs
src/db/: connection.rs  mod.rs  retry.rs  runtime.rs  transaction.rs
src/entities/: audit_log.rs  auth_session.rs  background_task.rs  contact_verification_token.rs  external_auth_binding_flow.rs  external_auth_email_verification_flow.rs  external_auth_identity.rs  external_auth_login_flow.rs  external_auth_provider.rs  mail_outbox.rs  minecraft_profile.rs  minecraft_profile_texture.rs  minecraft_texture.rs  minecraft_texture_report.rs  mod.rs  passkey.rs  system_config.rs  user.rs  user_ban.rs  user_ban_event.rs  user_invitation.rs  user_operator_scope.rs  user_profile.rs  yggdrasil_session_forward_server.rs  yggdrasil_token.rs
src/external_auth/: driver.rs  mod.rs  registry.rs  url.rs
src/metrics/: mod.rs  recorder.rs  registry.rs
src/object_storage/: local.rs  mod.rs  s3.rs
src/runtime/: assembly.rs  bootstrap.rs  components.rs  entrypoint.rs  http.rs  logging.rs  mod.rs  shutdown.rs  state.rs  state_traits.rs  tasks.rs
src/services/: admin_overview_service.rs  admin_user_service.rs  audit_service.rs  auth_service.rs  ban_service.rs  cache_facade.rs  captcha_service.rs  health_service.rs  mail_audit_service.rs  mail_outbox_service.rs  mail_service.rs  mail_template.rs  mod.rs  passkey_service.rs  system_config_service.rs  texture_service.rs  user_invitation_service.rs  yggdrasil_service.rs  yggdrasil_session_forward_service.rs  yggdrasil_signature.rs
src/tasks/: runtime.rs
src/texture_storage/: local.rs  mod.rs  s3.rs
src/types/: audit.rs  auth.rs  config.rs  external_auth.rs  facade.rs  mod.rs  passkey.rs  patch.rs  user.rs  yggdrasil.rs
src/utils/: id.rs  mod.rs  net.rs  numbers.rs  paths.rs  url.rs
tests/: generate_openapi.rs  test_admin_external_auth.rs  test_admin_overview.rs  test_admin_tasks.rs  test_audit.rs  test_auth.rs  test_cache.rs  test_config.rs  test_cors.rs  test_database_backends.rs  test_external_auth.rs  test_gravatar_config.rs  test_health.rs  test_minecraft_binding.rs  test_oauth2.rs  test_oidc.rs  test_public.rs  test_user_bans.rs  test_user_invitations.rs  test_yggdrasil.rs
tests/common/: mod.rs
tests/external_auth/: mod.rs
(+403 files in other folders)
