[package]
name = "aster_yggdrasil"
version = "0.1.0-beta.1"
description = "Self-hosted Minecraft skin site and Yggdrasil authentication server."
authors = [
    "AptS-1547 <apts-1547@esaps.net>",
    "AptS-1548 <apts-1548@esaps.net>",
]
repository = "https://github.com/AsterCommunity/AsterYggdrasil"
license = "MIT"
edition = "2024"
rust-version = "1.95.0"

# 优化配置
[profile.dev]
opt-level = 1
lto = false
codegen-units = 16
panic = "unwind"
strip = false
incremental = true

[profile.release]
opt-level = 2
lto = true
codegen-units = 1
panic = "abort"
strip = true

# 压测/火焰图采样用：接近 release，但保留符号并关闭 LTO，方便 perf 展开栈。
# frame pointer 需要通过 RUSTFLAGS 传入：
# RUSTFLAGS="-C force-frame-pointers=yes" cargo build --profile profiling
[profile.profiling]
inherits = "release"
opt-level = 2
codegen-units = 1
debug = true
strip = false
lto = false
panic = "abort"

[profile.release-performance]
inherits = "release"
opt-level = 3
codegen-units = 1
panic = "abort"
strip = true

[workspace]
members = [".", "migration", "crates/aster-texture-renderer"]

[features]
default = ["server"]
server = []
cli = ["server", "dep:clap"]
metrics = ["server", "dep:prometheus", "dep:sysinfo"]
openapi = [
    "dep:utoipa",
    "dep:utoipa-swagger-ui",
    "aster_forge_api/openapi",
    "aster_forge_api_docs_macros/openapi",
]
full = ["server", "cli", "metrics", "openapi"]
jemalloc = ["dep:tikv-jemallocator"]
jemalloc-stats = [
    "jemalloc",
    "tikv-jemallocator/stats",
    "dep:tikv-jemalloc-ctl",
    "tikv-jemalloc-ctl/stats",
]
jemalloc-profiling = ["jemalloc-stats", "tikv-jemallocator/profiling"]

[dependencies]
actix-web = { version = "4.14.0", features = ["compress-brotli", "compress-gzip"] }
actix-multipart = "0.8.0"
actix-governor = "0.10"
aster-texture-renderer = { path = "crates/aster-texture-renderer" }
aster_forge_actix_middleware = { git = "https://github.com/AsterCommunity/AsterForge", package = "aster_forge_actix_middleware" }
aster_forge_alloc = { git = "https://github.com/AsterCommunity/AsterForge", package = "aster_forge_alloc" }
aster_forge_api = { git = "https://github.com/AsterCommunity/AsterForge", package = "aster_forge_api" }
aster_forge_api_docs_macros = { git = "https://github.com/AsterCommunity/AsterForge", package = "aster_forge_api_docs_macros" }
aster_forge_cache = { git = "https://github.com/AsterCommunity/AsterForge", package = "aster_forge_cache", features = ["memory", "redis"] }
aster_forge_crypto = { git = "https://github.com/AsterCommunity/AsterForge", package = "aster_forge_crypto" }
aster_forge_db = { git = "https://github.com/AsterCommunity/AsterForge", package = "aster_forge_db" }
aster_forge_logging = { git = "https://github.com/AsterCommunity/AsterForge", package = "aster_forge_logging" }
aster_forge_metrics = { git = "https://github.com/AsterCommunity/AsterForge", package = "aster_forge_metrics" }
aster_forge_panic = { git = "https://github.com/AsterCommunity/AsterForge", package = "aster_forge_panic" }
aster_forge_storage_core = { git = "https://github.com/AsterCommunity/AsterForge", package = "aster_forge_storage_core" }
aster_forge_utils = { git = "https://github.com/AsterCommunity/AsterForge", package = "aster_forge_utils" }
aster_forge_validation = { git = "https://github.com/AsterCommunity/AsterForge", package = "aster_forge_validation" }
argon2 = "0.5.3"
async-trait = "0.1"
aws-credential-types = { version = "1.2.14", features = ["hardcoded-credentials"] }
aws-sdk-s3 = { version = "1.137.0", default-features = false, features = ["sigv4a", "http-1x", "default-https-client", "rt-tokio"] }
base64 = "0.22"
captcha-rs = "0.5"
chrono = { version = "0.4.45", default-features = false, features = ["clock", "serde"] }
clap = { version = "4", features = ["derive", "env"], optional = true }
config = { version = "0.15", default-features = false, features = ["toml"] }
dotenvy = "0.15"
futures = "0.3"
governor = "0.10"
hex = "0.4"
http = "1"
image = { version = "0.25.10", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
ipnet = "2.12.0"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls"] }
md-5 = "0.11"
migration = { version = "0.1.0", path = "migration" }
num_cpus = "1.17.0"
parking_lot = "0.12"
openidconnect = "4.0.1"
prometheus = { version = "0.14", optional = true, default-features = false }
rand = { version = "0.10.1", default-features = false, features = ["std", "std_rng", "thread_rng"] }
reqwest = { version = "0.13", features = ["stream", "json"] }
rsa = { version = "0.10.0-rc.18", features = ["sha1"] }
rust-embed = "8"
sea-orm = { version = "2.0.0-rc.41", features = ["sqlx-mysql", "sqlx-postgres", "sqlx-sqlite", "macros", "runtime-tokio-rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha1 = "0.11"
sha2 = "0.11"
sysinfo = { version = "0.39", optional = true, default-features = false, features = ["system"] }
tikv-jemallocator = { version = "0.7", optional = true }
tikv-jemalloc-ctl = { version = "0.7", optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "fs", "io-util"] }
tokio-util = { version = "0.7", features = ["io", "io-util"] }
toml = "1.1"
toml_edit = "0.25"
tracing = { version = "0.1.44", default-features = false }
utoipa = { version = "5.5.0", features = ["chrono", "actix_extras", "repr"], optional = true }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"], optional = true }
url = "2"
urlencoding = "2"
uuid = { version = "1", features = ["v4", "serde"] }
validator = { version = "0.20", features = ["derive"] }
webauthn-rs = { version = "0.6.1-dev", default-features = false, features = ["conditional-ui", "danger-allow-state-serialisation"] }
webauthn-rs-proto = "0.6.1-dev"

[build-dependencies]
chrono = "0.4"

[dev-dependencies]
actix-http = "3"
fs2 = "0.4"
rand_08 = { package = "rand", version = "0.8" }
getrandom = "0.4"
ring = "0.17"
testcontainers = { version = "0.27", features = ["reusable-containers"] }
webauthn-authenticator-rs = { version = "0.6.1-dev", features = ["softpasskey"] }

[lib]
doctest = false
