[package]
name = "migration"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
async-trait = "0.1"
aster_forge_db = { git = "https://github.com/AsterCommunity/AsterForge", package = "aster_forge_db" }
sea-orm-migration = { version = "2.0.0-rc.41", features = ["sqlx-mysql", "sqlx-postgres", "sqlx-sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lib]
doctest = false
